--- a/styles/Projects.module.scss
+++ b/styles/Projects.module.scss
@@ -63,7 +63,8 @@
         width: 100%;
         display: grid;
         grid-auto-rows: 1fr;
-        grid-template-columns: repeat(3, 1fr);
+        // grid-template-columns: repeat(3, 1fr);
+        grid-template-columns: repeat(auto-fill, minmax(min(13rem, 100%), 1fr));
         transition: all var(--speed-medium);
         animation: var(--animation-fade-up);
         overflow: hidden;
@@ -152,7 +153,7 @@
             margin-top: 0.5rem;
 
             .cardContainer {
-                padding: 0.4rem;
+                padding: 0.7rem;
             }
         }
 
@@ -171,10 +172,9 @@
         }
 
         .grid {
-            grid-template-columns: repeat(2, 1fr);
 
             .cardContainer {
-                padding: 1rem;
+                padding: 0.6rem;
                 overflow: visible;
             }
         }
@@ -187,7 +187,7 @@
         .grid {
 
             .cardContainer {
-                padding: 0.4rem;
+                padding: 0.5rem;
             }
         }
     }
@@ -197,12 +197,11 @@
     .projectPage {
 
         .grid {
-            grid-template-columns: repeat(1, 1fr);
+            // grid-template-columns: repeat(1, 1fr);
             margin-top: 0.5rem;
 
             .cardContainer {
-                padding: 1rem;
-                overflow: visible;
+                padding: 0.8rem;
             }
         }
     }
